css/all.css
html {
	overflow: hidden;
}

html, body, ul, li, table, h1, h2 {
	margin: 0;
	padding: 0;
	list-style-type: none
}

body {
 	font: 12px "lucida grande", Tahoma, Arial, sans-serif;
	background: #222 url('../images/background/background-hdpi-portrait.png');
 	color: #fff;
 	width: 100%;
 	height: 100%;
 	position: absolute;
}

#splash {
	display: block;
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 1000;
}

#menu {
	position: absolute;
	float: left;
	background: url('../images/menu_back.png') repeat;
	width: 75%;
	height: 100%;
	left: -75%;
}

#menu ul {
	padding-top: 60px;	
	background: url('../images/menu_head.png') no-repeat 15px 10px;
	list-style-image:url('../images/Bullet.png');
}

#menu ul li {
	padding: 15px;
	border-top: 1px solid #555;
	border-bottom: 1px solid #000;
	/*background: url('../images/new_menu_li.png') no-repeat left;*/
	font-family: "Myriad Pro", "lucida grande", Tahoma, Arial, sans-serif;
	font-size: 14.4px;
	cursor: pointer;
}

#menu ul li:active{
	background-color: #575757;
}


#content {
	display: none;
	position: absolute;
	height: 100%;
	width: 100%;
	box-shadow: 0px 0px 30px #000;
	-webkit-box-shadow: 0px 0px 30px #000;
}

#header {
	background: url('../images/header.png') repeat;
	height: 60px;
}

#header span {
	display: block;
	cursor: pointer;
	float: left;
	height: 60px;
	width: 80px;
	background: url('../images/menu.png') no-repeat 0px -15px;
}

.bulletimage{
	position: relative;
	top:4px;
	margin-right: 10px;
}



#header h1 {
	vertical-align: middle;
	padding-top: 15px;
	text-align: center;
}

.page {
	display: none;
}




/*Contact Page Styles Strarts Here*/
.contactHeader{
	font-family: "Myriad Pro", "lucida grande", Tahoma, Arial, sans-serif;
	color: #e8125f;
	font-size: 14px;
	padding-top: 3%;
	padding-left: 17%;

}
.countryHeader{
	padding-top: 7%;
	padding-left: 17%;

}
#page_contact ul {

	padding-left: 17%;
	line-height: 20px;
}


#page_contact ul li{

	font-size: 12px;
}

.contactmeImage{
	position: relative;
	top:14px;
	width:40px;
	margin-right: 3%;
}

.slider {
	position: absolute;
	height: 100%;
	width: 100%;
	overflow: hidden;
}

.slider li {
	position: absolute;
	float: left;
	width: 100%;
	text-align: center;
}

.slider li img {
	margin-top: 10px;
	width: 80%;
}

.slider li a {
	position: absolute;
	right: 5%;
	bottom: 10%;
	text-decoration: none;
	background: rgba(0,0,0,0.6);
	color: white;
	padding-top: 3px;
	padding-bottom: 3px;
	padding-left: 2px;
}

.slider-icons {
	position: absolute;
	top: 50%;
	z-index:100;
	width: 35px;
	height: 33px;
	background: url('../images/controls.png') no-repeat;
}

.slider-icons.larrow {
	left: 10px;
	background-position: 0px 1px;
}

.slider-icons.rarrow {
	right: 10px;
	background-position: -42px 1px;
}

.slider-nav-icons {
	z-index:100;
	position: absolute;
	bottom: 25px;
	height: 10px;
	left: 50%;
}

.slider-nav-circle {
	float: left;
	width: 10px;
	height: 10px;
	border-radius: 5px;
	background-color: #555;
	margin: 0px 5px;
	opacity: 0.7;
	box-shadow: 1px 1px 2px #000;
}

.slider-nav-circle.current-slide {
	background-color: #fff;
}

